--- a/000filmes-api/src/main/resources/application.properties
+++ b/000filmes-api/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=000filmes-api
 #NON_KEYWORDS=USER nao funcionou, conflito combd h2
 server.port = 8081
 
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
 #estou dizendo para JPA so funcionar da minha camada se servico pra baixo.
 spring.jpa.open-in-view=false 
